--- a/override.html
+++ b/override.html
@@ -1,4 +1,5 @@
-  .SITE_ROOT
+<style> 
+.SITE_ROOT
   {
     top: 0px !important;
   }
@@ -12,3 +13,4 @@
   {
     margin-top: 0px !important;
   }
+</style>
