--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<head>
+<base href="/">
+    <link rel="stylesheet" href="/assets/override.css" />
+  </head>
 <iframe src="https://heathh-m.wixsite.com/cuturl" width="100%" height="100%" allowtransparency="true" frameborder="0"></iframe>
