--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <head>
+    <script>
+    window.onload = function() {
+   let myiFrame = document.getElementById("embed");
+   let doc = myiFrame.contentDocument;
+   doc.body.innerHTML = doc.body.innerHTML + '<style>.SITE_ROOT{top: 0px !important;} #WIX_ADS{display: none !important;} #SITE_HEADER{margin-top: 0px !important;}</style>';
+
+    </script>
 <base href="/">
     <link rel="stylesheet" href="/assets/override.css" />
   </head>
-<iframe src="https://heathh-m.wixsite.com/cuturl" width="100%" height="100%" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://heathh-m.wixsite.com/cuturl" width="100%" height="100%" allowtransparency="true" frameborder="0" id="embed"></iframe>
